# Agastya

./: .env.example  .gitignore  AGASTYA_master_build_prompt_v2.md  LICENSE  README.md  agastya_violations.db  front.md  ppt.md  ps  pyproject.toml  requirements.txt  researchdone
agastya/: config.py  paths.py  pipeline.py  types.py
agastya/api/: __init__.py  app.py  server.py
agastya/data/: assemble.py  data_yaml.py  manifest.py  schema_map.py  yolo_format.py
agastya/detect/: nms.py  results_adapter.py  sahi_merge.py
agastya/eval/: ablation.py  degrade.py  e2e.py  prf.py  scoring.py  yolo_data.py
agastya/ingest/: __init__.py  annotate.py  runner.py
agastya/schema/: classes.py
agastya/stages/: base.py  stubs.py
agastya/store/: __init__.py  schema.py  sqlite_store.py
agastya/verify/: calibration.py
configs/: README.md
docs/runbooks/: datasets.md  e2e-baseline.md  phase1-baseline.md  phase4-ablation.md  plan2-restore-eval.md  plan3-gate-ablation.md
scripts/: build_dataset.py  download_datasets.sh  eval_ablation.py  eval_angle_sweep.py  eval_baseline.py  eval_e2e.py  eval_gate_ablation.py  eval_restore.py  fit_calibration.py  ingest.py  migrate_evidence_paths.py  seed_demo.py  smoke_sam2_associate.py  sweep_nohelmet_conf.py  sweep_triple_overlap.py  train_baseline.py  tune_gate_threshold.py  validate_sahi.py
tests/: test_config.py  test_paths.py  test_pipeline.py  test_smoke.py  test_types.py
tests/api/: test_app.py
web/: agastya.css  agastya.js  dashboard.html  detail.html  index.html  performance.html  reports.html  verify.html  violations.html
(+89 files in other folders)
